hphp/hack/test/typecheck/nullable_tparam.php
<?hh

function expect<T as int>(?T $_): void {}

function test<T>(?T $x): void {
  expect($x);
}
